--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Vite + React</title>
   </head>
-  <body class="bg-stone-200 py-2 px-4">
+  <body class="bg-stone-200 py-2 px-2 lg:px-4">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
