--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Shopping || Store</title>
   </head>
-  <body class="bg-stone-200 py-2 px-2 lg:px-4">
+  <body class="px-2 py-2 bg-stone-200 lg:px-4 ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
